@@ -14,6 +14,7 @@ Version 1.5.10+svn:
   * User interface
     * Fixed a termination which could happen if you clicked twice on a button
       in the MP password dialog.
+    * Fixed glitches with long [option] lists.
 
 Version 1.5.10:
   * Campaigns
