@@ -15,6 +15,8 @@ Version 1.5.10+svn:
    * Fixed the assertion failure which could happen when clicking on a button
      (bug #12927)
    * allow chat command quoting as '/ /command'
+   * Fixed a bug which sized listboxes to wrong sizes and caused visual
+     glitches bug #12940
 
 Version 1.5.10:
  * Campaigns:
